--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,6 +4,7 @@
   "manifest_version": 2,
   "description": "Sample Chrome Extension",
   "content_scripts": [{
+    "matches": [ "http://*/*", "https://*/*" ],
     "js": [
       "sample_extension.js"
     ]
