--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,9 @@
       "sizes": "512x512"
     }
   ],
-    "display": "standalone"
-}
+    "display": "standalone",
+    "externally_connectable": {
+    "ids": [
+      "chlajlmoagkkmmifopkeagclhjfaiddl"
+    ]
+}}
